--- a/_docker/app/Dockerfile
+++ b/_docker/app/Dockerfile
@@ -9,12 +9,14 @@ RUN apt update && apt install -y \
       libicu-dev \
       git && \
       docker-php-ext-install intl && \
-      docker-php-ext-install pdo pdo_mysql && \
+      docker-php-ext-install pdo pdo_mysql pdo_pgsql && \
       docker-php-ext-install bcmath && \
       docker-php-ext-install gd && \
       docker-php-ext-install zip && \
       apt-get clean && \
       rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+
+RUN docker-php-ext-enable intl bcmath gd pdo pdo_mysql pdo_pgsql zip
 
 COPY ./_docker/app/php.ini /usr/local/etc/php/conf.d/php.ini
 
